@@ -45,22 +45,34 @@ except ImportError:
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-11831.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-12109.tgz',
      'xapian-core.tgz',
-     '924375e1f1a78c78b391907f79a678717870abee',
+     '8ccfd92c2312c0c7d288fae4189632ccad0d48cf',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-11831.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-12109.tgz',
      'xapian-bindings.tgz',
-     'a2de923940e5cebcae174a23c448bf1b9cfb6713',
+     '68b00fe90c77053d22ad1ee4241b4c8808fc5472',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-11831.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-12109.tgz',
      'win32msvc.tgz',
-     '32705b90c346fec914370ef619fda194e36815cf',
+     '0c78a92f01b03d209d1ea79862b19e5450ba64e7',
      'xapian-core/win32',
+    ),
+    ('Xapian extras',
+     'http://xappy.googlecode.com/files/xapian-extras-12109.tar.gz',
+     'xapian-extras.tgz',
+     '6094cafb0f9cfaa0b3534efd6fed84f8b4effa1e',
+     '',
+    ),
+    ('Xapian extras bindings',
+     'http://xappy.googlecode.com/files/xapian-extras-bindings-12109.tar.gz',
+     'xapian-extras-bindings.tgz',
+     'a43166cc68c2ad5d02596104851116b73acdb539',
+     '',
     ),
 )
 
