@@ -1,3 +1,9 @@
+Fri Mar 06 05:48:28 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/build_xapian.sh,libs/get_xapian.py: Update with new
+	  tarballs, and add script to build and install (locally) all the
+	  tarballs.
+
 Thu Mar 05 16:20:01 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/unittests/distance.py: Fix completely broken distance test.
